@startuml
skinparam style strictuml
left to right direction
skinparam groupInheritance 3

class "Account" {
Name
Phone number
Email
Photo: [0..1]
'the [0..1] in Photo indicates an optional value, see Craig 2004, p.121
Account Status: [Active, Inactive]
}

class "Project Resources" {
Start Date
End Date
Percentage of Allocation
Cost Per Hour
}

class "Project" {
Code
Name
Description
Start Date
End Date
Sprint Duration
Number of Planned Sprints
Project Status
Budget
Report
}

class Role {
Role Name
}


"Account" "1" -- "1" "Project Resources": associated as Team Member by Manager   <
"Project" "1" -right-"1" "Project Resources": allocated by Manager  <
"Project Resources" "1" -- "*" "Role": plays  >
@enduml